# cuda_pillow_resize

./: CMakeLists.txt  Imaging.h  file.cu  imageOps.cpp  image_process.cu  ipl.h  jpeg.cu  jpeg.h  main.cu  npy.h  pil.cu
cv/: CMakeLists.txt  cv.cpp
download/: CMakeLists.txt  SafeQueue.h  SafeQueueTask.h  Task.h  ThreadPool.h  cv.cpp  download.cpp  download.h  file.cpp
include/: libcuda.h  library.h
